--- a/index.html
+++ b/index.html
@@ -395,10 +395,14 @@
       </div>
       <div class="radio">
         <p>Вы подписаны на e-mail рассылку ?</p>
-        <input type="radio" id="rd1" name="radio">
-        <label for="rd1">Да</label>
-        <input type="radio" id="rd2" name="radio">
-        <label for="rd2">Нет</label>
+        <div class="form-radio">
+          <input type="radio" id="rd1" name="radio" value="1">
+          <label for="rd1">Да</label>
+        </div>
+        <div class="form-radio">
+          <input type="radio" id="rd2" name="radio" value="2">
+          <label for="rd2">Нет</label>
+        </div>
       </div>
       <div class="input-themes">
         <p>Расскажите, какой контент вы хотели бы видеть на нашем сайте ?</p>
